--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,19 @@
-<script src></script>
-<!-- Disable function -->
+<footer class="footer text">
+    <p>Stefan Radouane</p>
+    <span></span>
+    <a href="https://github.com/stefanradouane/browser-technologies-2223" target="_blank">GitHub repo</a>
+    <span></span>
+    <p>Browser Technologies</p>
+    <span></span>
+    <p>22/23</p>
+</footer>
+<script src="../script/main.js"></script>
 <noscript>
+    <style>
+        .caroussel__options{
+            display: none;
+        }
+    </style>
 </noscript>
 </body>
 </html>
