--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
-  <h2>A World Full With Images</h2>
-  <a href="/gallery">Back to Home</a>
+<header class="header">
+  <h2 class="title title--header">World Gallery</h2>
+  <a class="anchor" href="/">Back to Home</a>
 </header>
