--- a/public/css/components/all.css
+++ b/public/css/components/all.css
@@ -1,7 +1,9 @@
 @import "./anchor/all.css";
 @import "./caroussel/all.css";
 @import "./cta/all.css";
+@import "./home/all.css";
 @import "./header/all.css";
 @import "./image-form/all.css";
 @import "./title/all.css";
 @import "./page/all.css";
+@import "./empty-state/all.css";
