--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,12 +1,14 @@
 <%- include('../partials/head', {title: "World Gallery"}) %>
 <main class="home">
   <section>
-    <h1 class="title title--h0">World Gallery</h1>
+    <h1 class="title title--h0" aria-label="World Gallery">World Gallery</h1>
     <p class="text text-x-large">
       Bekijk of voeg een foto toe aan de World Gallery
     </p>
-    <a class="anchor" href="/gallery">Toon alle foto's</a>
-    <a class="anchor anchor--sec" href="/new-image">Voeg een foto toe</a>
+    <a class="anchor anchor--fix" href="/gallery">Toon alle foto's</a>
+    <a class="anchor anchor--sec anchor--fix" href="/new-image"
+      >Voeg een foto toe</a
+    >
   </section>
   <%- include('../components/leaf', {position: "b-r"}) %> <%-
   include('../components/leaf', {position: "t-l"}) %>
