--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer text">
+<footer class="footer text-small">
     <p>Stefan Radouane</p>
     <span></span>
     <a href="https://github.com/stefanradouane/browser-technologies-2223" target="_blank">GitHub repo</a>
@@ -9,11 +9,21 @@
 </footer>
 <script src="../script/main.js"></script>
 <noscript>
-    <style>
+    <!-- <style>
         .caroussel__options{
             display: none;
         }
-    </style>
+
+        .image-form-no-js-1{
+            order:1;
+        }
+        .image-form-no-js-2{
+            order:2;
+        }
+        .image-form-no-js-3{
+            order:3;
+        }
+    </style> -->
 </noscript>
 </body>
 </html>
