--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
 <header class="header">
   <h2 class="title title--header">World Gallery</h2>
-  <a class="anchor" href="/">Back to Home</a>
+  <a class="anchor anchor--fix" href="/gallery">Terug naar de Gallery</a>
 </header>
