--- a/public/assets/styles/components/all.css
+++ b/public/assets/styles/components/all.css
@@ -1,4 +1,4 @@
-@import './card/all.css';
-@import './menu/all.css';
-@import './tab/all.css';
-@import './title/all.css';
+@import "./card/all.css";
+@import "./menu/all.css";
+@import "./tab/all.css";
+@import "./title/all.css";
