--- a/public/css/lib/reset.css
+++ b/public/css/lib/reset.css
@@ -7,6 +7,10 @@
   line-height: 1em;
 }
 
-a {
-  text-decoration: none;
+.Gallery .header .anchor {
+  display: none;
+}
+
+label[for="img"] {
+  order: -1;
 }
