--- a/views/components/image-form.ejs
+++ b/views/components/image-form.ejs
@@ -2,7 +2,8 @@
   class="image-form text"
   method="POST"
   enctype="multipart/form-data"
-  action="/gallery">
+  action="/gallery"
+  data-form>
   <section>
     <label>
       Titel van de foto*
@@ -32,8 +33,8 @@
       Datum van de foto*
       <input type="date" name="img-date" required />
     </label>
-    <label for="image-input">
-      Upload een foto*
+    <label for="img" data-label>
+      Voeg een foto toe
       <input
         type="file"
         id="image-input"
