--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,5 +7,5 @@
     <title><%- title %></title>
     <link rel="stylesheet" href="../css/all.css" />
   </head>
-  <body></body>
+  <body class="<%- title %>"></body>
 </html>
