:sparkles: ADD last changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
 </footer>
 <script src="../script/main.js"></script>
 <noscript>
-    <!-- <style>
+    <style>
         .caroussel__options{
             display: none;
         }
@@ -23,7 +23,7 @@
         .image-form-no-js-3{
             order:3;
         }
-    </style> -->
+    </style>
 </noscript>
 </body>
 </html>
